<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="action_settings">Settings</string>
    <string name="arrancar">Arrancar</string>
	<string name="configurar">Configurar</string>
	<string name="acercade">Acerca de..</string>
	<string name="salir">Salir</string>
	<string name="tituloAplicacion">Asteroides</string>
</resources>